--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -24,6 +24,7 @@ ru:
     messages:
       blank: обязательно для заполнения
       email_format: невалидный адрес почтового ящика
+      confirmation: не совпадает с введенным паролем
       too_short: минимум %{count} символов
       not_a_number: должно быть числом
       invalid: невалидный формат
