Add more details to position model

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,4 +29,5 @@ ru:
       not_a_number: должно быть числом
       invalid: невалидный формат
       taken: уже занято
+      inclusion: не входит в допустимый диапазон значений
 
