--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -33,8 +33,8 @@ ru:
 
   views:
     pagination:
-      first: '&laquo; Первая'
-      last: 'Последняя &raquo;'
-      previous: '&lsaquo; Предыдущая'
-      next: 'Следующая &rsaquo;'
+      first: '&larr; Первая'
+      last: 'Последняя &rarr;'
+      previous: '&larr;'
+      next: '&rarr;'
       truncate: '&hellip;'
