--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -95,6 +95,6 @@ ru:
 
   time:
     formats:
-      default: ! '%a, %d %b %Y, %H:%M:%S'
-      long: ! '%d %B %Y, %H:%M'
+      default: ! '%a, %-d %B %Y, %H:%M:%S'
+      long: ! '%-d %B %Y, %H:%M'
       short: ! '%d %b, %H:%M'
